--- a/app/views/appointments/_meetups_nav.html.erb
+++ b/app/views/appointments/_meetups_nav.html.erb
@@ -1,5 +1,7 @@
 <% unless !signed_in? %>
-<div class="nav nav-tabs edit_link">
+<div class="nav nav-tabs tab_link">
+   <% debugger %>
+   
    <% if params[:folder] == 'traveler' || params[:folder].nil? %>
       <li class="active">
    <% else %>
