--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -4,7 +4,7 @@
 <div class="span11">    
    <div class="row" style="border-color:#F5FFF0">      
    	<div class="span1" style="margin-left:0px">
-         <%= link_to image_tag(find_display_imgurl(@recipient.id, "thumb")), user_path(@recipient) %>  	   
+         <%= link_to image_tag(find_display_imgurl(@recipient.id, "thumb"), id:"profile-thumb"), user_path(@recipient) %>  	   
    	</div>
    	<div class="span6" style="padding-left:10px">
    	   <p style="font-size:1.1em"> <i style="color: #00D66F" class="icon-user"></i>
