--- a/app/views/shared/_edit_tabs.html.erb
+++ b/app/views/shared/_edit_tabs.html.erb
@@ -1,5 +1,5 @@
 <div class="filler"></div>
-<div class="nav nav-tabs edit_link">
+<div class="nav nav-tabs tab_link">
    
    <% if params[:view] == "general" %>
       <li class="active">
