--- a/app/views/shared/_mailbox_nav.html.erb
+++ b/app/views/shared/_mailbox_nav.html.erb
@@ -1,5 +1,5 @@
 <% unless !signed_in? %>
-<div class="nav nav-tabs edit_link">
+<div class="nav nav-tabs tab_link">
    <% if params[:folder] == 'inbox' %>
       <li class="active">
    <% else %>
