--- a/app/views/shared/_rating.html.erb
+++ b/app/views/shared/_rating.html.erb
@@ -1,6 +1,6 @@
 <% int_score = (score * 10) / 10 %>
 <% dec_score = (score * 10).to_i % 10 %>
-<b style="color:#E6B85C; font-size:0.9em">
+<b style="color:#33CC33; font-size:1em">
 <% int_score.to_i.times do %> 
    <i class="icon-star"></i>   
 <% end %>
