--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="span10">
    <div class="row vertical-align:middle">
       <%= image_tag find_display_imgurl(@user.id, "thumb"), id: "profile-thumb" %>	  
-      <strong>Your settings</strong>
+      <strong style="margin-left:10px">Your settings</strong>
    </div> 
    <div class="filler"></div>
 
