--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 <div class="row" >
    
    <div class="span4 side-profile">
-      <div class="row" style="margin:5px 15px; height: 340px;">
+      <div class="row" style="padding-top: 5px; margin:5px 15px; height: 340px;">
          <%= render "personal_info" %>   
       </div>        
       <div class="row" style="margin: 0px 15px">
@@ -20,7 +20,7 @@
 </div> 
 
 <div class="filler"> </div>
-<ul class="nav nav-tabs edit_link">
+<ul class="nav nav-tabs tab_link">
    <% if params[:view] == "treview" || params[:view] == "hreview" %>
      <li>
    <% else %>
