--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,7 +53,6 @@ $navbarLinkColor:#ccc;
 
 }
 .aboutpage_dark{
-	margin-left:90px;
 	
 	h2{
 		color:#fff;
@@ -120,7 +119,9 @@ body {
 
 .homepage {
 	padding-top:80px;
-	background-color: #eed;
+	background-image:url('weave4.png');
+	background: #eed;
+	background-repeat: repeat;
 	padding-bottom: 50px;
 	border-radius:9px;
 	height: 400px;
@@ -131,7 +132,7 @@ body {
 	};
 	h2{
 		font-size: 1.7em;
-		color: #3B9C9C;
+		color: #777;
 		margin-left: 13%;
 	}
 }
@@ -140,12 +141,59 @@ body {
 }
 .thumbnail{
 	background-color: #bbb;
-	padding:1px;
+	padding:0px;
+}
+
+.service-banner{
+	background-image:url('weave.png'); 
+	text-align: center; 
+	margin-left:0px; 
+	margin-top:0px;
+	padding:15px 0px 35px 5px;
+}
+.header-link-block{
+	height: 45px;
+	b{
+		font-size:1.1em;
+	}
+	p{
+		color:#ddd;
+	}
+}
+
+.top-banner{
+	&#cork{
+		
+	background-image:url('cork.png'); 
+   }
+
+   &#weave{
+	   background-image:url('weave2.png'); 	
+   }
+
+	padding:10px; 
+	border-radius:5px; 
+	margin-top:-10px;
+	width:96%;
+	border: solid 1px #ddd;
+	div#overlay{
+		position:relative;
+		margin: 5px 0px 0px 0px;
+		background-color:rgba(55, 55, 55, 0.8); 
+		height:227px;
+		
+		p{
+			font-size:1.2em;
+			color:#333;
+		}
+	}
+	
+
 }
 
 #badge{
-	background-color:#eee;
-	height:365px;
+	background-color:#ffffff;
+	height:335px;
 	padding: 5px;
 	img#main{
 		width:300px;
@@ -207,6 +255,19 @@ body {
 		background-color:transparent;
 		text-decoration: underline;
 	}
+	
+	small{
+		color:#666;
+	}
+}
+
+.tab_link{
+	
+	a:link, a:visited{
+	   color: #049cdb;
+   }
+
+	font-size: 1.3em;
 	
 	small{
 		color:#666;
@@ -545,7 +606,12 @@ aside {
 	select#hostprofile_currency{
 		width:70px;
 		height:40px;
-		margin-top:7px;
+		margin-top:8px;
+	}
+	select#forumpost_currency{
+		width:70px;
+		height:40px;
+		margin-top:8px;
 	}
 	
 	textarea{
@@ -656,7 +722,7 @@ ul.ui-autocomplete {
 .signup-block{
 	margin-left:15%; 
 	padding:30px 0px 30px 0px; 
-	background-color:#3B9C99;
+	background-color:#555;
 	border-radius: 3px;
 	border-bottom: 2px solid #ccc;
 	
@@ -724,7 +790,7 @@ ul.ui-autocomplete {
 	width: 105px;
 	height: 60px;
 	display: inline-block;
-	background: gray;
+	background: white;
 	border-radius: 7px;
 	margin: 0px 5px 0px 20px;
 	vertical-align:middle;
@@ -737,33 +803,25 @@ ul.ui-autocomplete {
 	background-color:#FF7285;
 }
 
-
-.menu_itemd img {
-	position: relative;
-	left: 79px;
-	top:3px;
-
-}
 .menu_item img {
 	position: relative;
-	left: 27px;
+	left: 0px;
 	top:10px;
-	width:55px;
 	height:40px;
 }
 
 .menu-label {
 	position:relative;
 	z-index:999;
-	margin-left: 5px;
+	margin-left: 0px;
 	font-family:helvetica, verdana;
-	left: 12px;
-	top: -30px;
-	width: 75px;
+	left: -10px;
+	top: 23px;
+	width: 120%;
 	height:50px;
 	text-align:center;
 	font-size: 15px;
-	color: white;
+	color: #666;
 }
 #link-block:hover{
 	background: #eee;
