--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, 'sign up') %>
-<div class="filler"></div>
-<div class="row">
-   <%= render 'form' %>
+<div class="container">
+   <div class="filler"></div>
+
+   <div class="row">
+      <%= render 'form' %>
+   </div>
 </div>
+
