--- a/app/views/forumposts/_forumpost.html.erb
+++ b/app/views/forumposts/_forumpost.html.erb
@@ -17,7 +17,7 @@
       </li>
       <br>
       <% end %>
-      <%= link_to forumpost_path(p) do %>
+      <%= link_to forumpost_path(p), class: "blocklink" do %>
       
       <li id="link-block">
          
@@ -38,7 +38,7 @@
                 </span>
              </div>
              
-             <small style="font-size:0.9em; color:gray"> responses <%= p.responded_count %></small>         
+             Responses <%= p.responded_count %>        
          </div> 
          <div class="span1">
             <%= link_to '<br/> <i class="icon-trash" style="color:#e0467c"></i>'.html_safe, p, :confirm=>"Are you sure you want to delete this post?", :method=> :delete unless p.user_id != current_user.id %>
