--- a/app/views/forumposts/index.html.erb
+++ b/app/views/forumposts/index.html.erb
@@ -1,10 +1,27 @@
 <% provide(:title, "Request a meetup") %>
-
-<%= render "corkboard_nav" %>
+<div class="container">
+   <%= render "corkboard_nav" %>
+</div>
 
 <% if params[:view] != "traveler" %>
 
+<div class="container" id="white">
+   <div class="nav nav-tabs tab_link">
 
+   <% if params[:view] != "traveler" %>
+      <li class="active">
+   <% else %>
+     <li>
+   <% end %>
+
+   <%= link_to "Corkboard", board_path(view: "host")%></li>
+   <% if params[:view] == "traveler" %>
+      <li class="active"> 
+   <% else %>
+      <li>
+   <% end %>
+   <%= link_to "My posts", myposts_path(current_user, view:"traveler") %></li>
+   </div>
 <div class="row">
    <div class="span8">
       <h3>
@@ -25,4 +42,8 @@
       <%= will_paginate @posts %>
 </div>
 <% end %>
+<div class="filler">
+   
+</div>
+</div>
 
