--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, params[:folder]) %>
+
+<div class="container" id="white">
+   
 <%= render 'shared/mailbox_nav' %>
 
 <div class="span11">    
-   <div class="row" style="border-color:#F5FFF0">      
+   <div class="row">      
    	<div class="span1" style="margin-left:0px">
          <%= link_to image_tag(find_display_imgurl(@recipient.id, "thumb"), id:"profile-thumb"), user_path(@recipient) %>  	   
    	</div>
@@ -60,3 +63,5 @@
 		<% end %>
    </div>
 </div>
+</div>
+
