--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'home') %>
-<div class = "center">
+<div class = "container">
    <div class="homepage">      
       <div class="span11">
          <div class="row">       
