--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,18 @@
 <% provide(:title, 'General settings') %>
+<div class="filler"></div>
 
-<div class="span10">
-   <div class="row vertical-align:middle">
-      <%= image_tag find_display_imgurl(@user.id, "thumb"), id: "profile-thumb" %>	  
-      <strong style="margin-left:10px">Your settings</strong>
-   </div> 
-   <div class="filler"></div>
+<%=render "shared/your_header", id: @user.id, text:"Your settings" %>
+<br/>
+<div class="container" id="white">
+   
+   <div class="span10">
 
    <div class="row edit_link">
       <%= render 'shared/edit_tabs'%>
    </div>
    
    <%= render 'edit_form' %> 
+</div>
 </div>
 
 
