--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require jquery.ui.datepicker
+ *= require jquery.Jcrop
+ *= require jquery.Jcrop.min
  *= require_self
  *= require_tree .
 */
