--- a/app/views/images/crop.html.erb
+++ b/app/views/images/crop.html.erb
@@ -1,34 +1,13 @@
-<% content_for (:head) do %>
-<%= stylesheet_link_tag "jquery.Jcrop" %>
-<%= javascript_include_tag "jquery.Jcrop.min" %>
-<script type="text/javascript">
-  $(function() {
-    $('#cropbox').Jcrop({
-       onChange: update_crop,
-       onSelect: update_crop,
-       setSelect: [0, 0, 540, 385],
-       aspectRatio: 0
-    });
-  });
-  
-  function update_crop(coords){
-     var ratio = <%= @image.img_geometry(:original).width %> / <%= @image.img_geometry(:large).width %>; 
-       $('#crop_x').val(Math.floor(coords.x * ratio));
-       $('#crop_y').val(Math.floor(coords.y * ratio));
-       $('#crop_w').val(Math.floor(coords.w * ratio));
-       $('#crop_h').val(Math.floor(coords.h * ratio));    
-  }
-</script>
-<% end %>
 <div class="container">
    <div class="span10">
       <br/>
    <strong> For best result, crop your image to fit the gallery window. </strong> <br/><br/>  
-   
-<%= image_tag @image.photo.url(:large), :id => "cropbox" %> <br/>
+<%= @image.img_geometry(:original).width %>
+<%= @image.img_geometry(:large).width %>
+<%= image_tag @image.photo.url(:large), :data => {:original => @image.img_geometry(:original).width, :large => @image.img_geometry(:large).width}, :id => "cropbox" %> <br/>
 <%= form_for @image do |f| %>
   <% for attribute in [:crop_x, :crop_y, :crop_w, :crop_h] %>
-  <%= f.hidden_field attribute, id: attribute %>
+  <%= f.text_field attribute, id: attribute %>
   <% end %>
   <%= f.submit "Crop", id: "blue-button"%>
 <% end %>
