--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,9 +8,10 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require_self
  *= require jquery.ui.datepicker
  *= require jquery.Jcrop
- *= require_self
+ *= require token-input-facebook
  *= require_tree .
 */
 
