--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,17 @@
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>  
   <%= csrf_meta_tags %>
+  
 </head>
 <body>
    <div id="fb-root"></div>
-   <script>
-   (function(d, s, id) {
+   <script>(function(d, s, id) {
      var js, fjs = d.getElementsByTagName(s)[0];
      if (d.getElementById(id)) return;
      js = d.createElement(s); js.id = id;
      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
      fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-  </script>
+   }(document, 'script', 'facebook-jssdk'));</script>
    <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
          <div class="container">
