--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
       </div>         
       <div class="span2">
          tiniHost on Facebook
-         <div class="fb-like" data-href="https://www.facebook.com/TiniHost" data-send="true" data-width="150" data-show-faces="true"></div><br/>
+         <div class="fb-like" data-href="https://www.facebook.com/tiniHost" data-send="true" data-width="150" data-show-faces="true"></div><br/>
       </div>               
   </div>
 </div>
