--- a/app/views/shared/_signedin_header.html.erb
+++ b/app/views/shared/_signedin_header.html.erb
@@ -1,14 +1,13 @@
-<li> <div class="blocknav">
+<li> 
+   <div class="blocknav">
       <%= link_to board_path(view: "host") do %>
-      <div class="header-link-block">
-         
+      <div class="header-link-block">    
          <b>Corkboard </b>
-       <p>requests </p>
-       </div>
-       
-       <% end %>     
+         <p>requests </p>
+      </div>    
+      <% end %>     
    </div>  
-   </li>
+</li>
 <li> <%= link_to mailbox_path(current_user, folder: "inbox") do %> 
      inbox <%= "(#{current_user.messages.unread.count})" unless current_user.messages.unread.count == 0 %>
      <% end %>
@@ -18,23 +17,22 @@
    <% end %>
 </li>
 <li id="fat-menu" class="dropdown">
-
-<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-   <table style="margin-left:0px">
-      <tr>
-         <td style="position:relative; top:-3px; left: -5px">
-           <%= image_tag(find_display_imgurl(current_user.id, "thumb"), id: "profile-navbar") %>
-         </td>
-         <td style="vertical-align:top; padding-top:0px">
-   	     <%= current_user.firstname.capitalize %> <b class="caret">
-   	   </td>
-   	<tr>
-   </table>
-</a>
-<ul class="dropdown-menu">
-	<li> <%= link_to "profile", current_user %></li>
-	<li> <%= link_to "settings", edit_user_path(current_user, view: "general") %> </li>
-	<li class="divider"> </li>
-	<li> <%= link_to "Sign out", signout_path, method: "delete" %> </li>
-</ul>
+   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <table style="margin-left:0px">
+         <tr>
+            <td style="position:relative; top:-3px; left: -5px">
+              <%= image_tag(find_display_imgurl(current_user.id, "thumb"), id: "profile-navbar") %>
+            </td>
+            <td style="vertical-align:top; padding-top:0px">
+      	     <%= current_user.firstname.capitalize %> <b class="caret">
+      	   </td>
+      	</tr>
+      </table>
+   </a>
+   <ul class="dropdown-menu">
+   	<li> <%= link_to "profile", current_user %></li>
+   	<li> <%= link_to "settings", edit_user_path(current_user, view: "general") %> </li>
+   	<li class="divider"> </li>
+   	<li> <%= link_to "Sign out", signout_path, method: "delete" %> </li>
+   </ul>
 </li>
