fixing sytle on ie for how it works

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="span9" style="background: white; padding: 20px 10px 20px 30px; margin:0px">
             <% if params[:view] == nil || params[:view] == "how"%>
-            <div class="span9 aboutpage_dark">
+            <div class="aboutpage_dark" style="padding:0px 0px 0 20px">
                <%= render "shared/how_it_works" %>
             </div>
             <% elsif params[:view] == "host" %>
